[project]
name = "cross-pointers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pynput>=1.8.1",
    "pyside6>=6.10.1",
    "python-dotenv>=1.2.1",
    "qasync>=0.28.0",
    "screeninfo>=0.8.1",
    "websockets>=15.0.1",
]
